@@ -28,6 +28,13 @@ if test $# -lt 1 || test -n "$tmp"; then
     exit $?
 fi
 
+## These variables need to exist
+## Note no use of $DESTDIR... we ignore it so that destdir can be used
+## for temp installs later copied to /
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+datarootdir=@datarootdir@
+
 ## Work out shared library build flags by platform
 shared_flags=
 SWVERS=$(which sw_vers 2> /dev/null)
