@@ -1,3 +1,9 @@
+2013-12-12  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Adding a definition of exec_prefix to rivet-buildplugin.
+
+	* Adding -DNDEBUG to the default non-debug build flags.
+
 2013-11-27  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Removing accidentally still-present no-as-needed linker flag from rivet-config.
